--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 PORT=3000
 
 # MongoDB Connection String
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.am06xtk.mongodb.net/?retryWrites=true&w=majority&appName=
+MONGO_URI=
+
 
 
